# rc_sim

./: .gitignore  AGENTS.md  README.md  rsync.sh
pkgs/bringup/: package.xml  setup.py
pkgs/bringup/launch/: control.launch.py  real.launch.py  sim.launch.py  spawn_robot_r2.launch.py  spawn_simple_box.launch.py
pkgs/rc2026_field/: .gitignore  API.md  README.md  setup.py
pkgs/rc2026_field/config/: kfs_config.yaml
pkgs/rc2026_field/launch/: rc2026_field_sim.launch.py
pkgs/rc2026_field/scripts/: kill_gazebo.sh  random_all.py  random_kfs_in_MF.py  random_kfs_on_grid.py
pkgs/robot_r2_control/: package.xml  setup.cfg  setup.py
pkgs/robot_r2_control/config/: kfs_loader.yaml  pose_servo.yaml  stage_two.yaml  stage_two_point_two.yaml  step_traverse.yaml  step_traverse_service.yaml
pkgs/robot_r2_control/robot_r2_control/: kfs_loader.py  lift_service_controller.py  pose_servo.py  stage_two_control.py  stage_two_controller.py  stage_two_point_one.py  stage_two_point_two.py  step_traverse.py  step_traverse_controller.py  step_traverse_service.py  teleop_control.py  teleop_controller.py  wasd_teleop.py
pkgs/robot_r2_controller/: package.xml  setup.py
pkgs/robot_r2_controller/config/: chassis_lift.yaml  chassis_pose_servo.yaml  kfs_gripper_grip.yaml  kfs_gripper_lift.yaml
pkgs/robot_r2_controller/robot_r2_controller/: chassis_pose_servo.py  kfs_alignment.py  kfs_gripper_grip.py  kfs_gripper_lift.py  kfs_gripper_rotate.py  kfs_gripper_tip_rotate.py  kfs_lift.py
pkgs/robot_r2_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
pkgs/robot_r2_description/config/: bar_lift_pid.yaml  bar_rotate_pid.yaml  gripper_pid.yaml  lift_pid.yaml
pkgs/robot_r2_description/robot_r2_description/: pid_loader.py
pkgs/robot_r2_description/src/: robot_r2_bar_lift_controller.cpp  robot_r2_bar_rotate_controller.cpp  robot_r2_gripper_controller.cpp  robot_r2_lift_controller.cpp  robot_r2_localizer.cpp  robot_r2_planar_move.cpp  robot_r2_tip_rotate_controller.cpp
pkgs/robot_r2_description/urdf/: robot_r2.urdf
pkgs/robot_r2_detect/: package.xml  setup.py
pkgs/robot_r2_detect/config/: kfs_detect.yaml
pkgs/robot_r2_detect/launch/: kfs_detect.launch.py
pkgs/robot_r2_detect/robot_r2_detect/: kfs_detect.py
pkgs/robot_r2_interfaces/: CMakeLists.txt  package.xml
pkgs/robot_r2_interfaces/msg/: KfsProcessedDetection.msg  LiftFeedback.msg
pkgs/robot_r2_interfaces/srv/: AlignToKFS.srv  LoadKfs.srv  MoveToPose.srv  SetGripperLift.srv  SetLift.srv  StageTwo.srv  StageTwoPointOne.srv  TraverseAdjacentStep.srv  TraverseStep.srv
pkgs/sim_to_real/: package.xml  setup.py
pkgs/sim_to_real/config/: serial_bridge.yaml
pkgs/sim_to_real/sim_to_real/: protocol.py  serial_bridge.py
pkgs/sim_to_real/test/: test_protocol.py
pkgs/test_pkg/: package.xml  setup.py
pkgs/test_pkg/robot_r2_tests/: move_to_center.py  rotate_90_servo.py  step_traverse.py
src/bringup/: package.xml
src/bringup/launch/: control.launch.py  real.launch.py  sim.launch.py
src/rc2026_field/: package.xml
src/rc2026_field/launch/: rc2026_field_sim_with_controller.launch.py
src/rc2026_field/rc2026_field/: field_gui.py  kfs_manager.py
src/rc2026_field/worlds/: robocon2026.world  robocon2026_with_kfs.world
src/robot_r2_control/: setup.py
src/robot_r2_control/config/: stage_two.yaml  stage_two_point_one.yaml
src/robot_r2_control/robot_r2_control/: kfs_loader.py  teleop_control.py
src/robot_r2_controller/: package.xml  setup.cfg  setup.py
src/robot_r2_controller/config/: chassis_pose_servo.yaml  kfs_alignment.yaml  kfs_gripper_grip.yaml  kfs_gripper_rotate.yaml  kfs_gripper_tip_rotate.yaml  kfs_lift.yaml
src/robot_r2_controller/robot_r2_controller/: chassis_lift.py  kfs_alignment.py
src/robot_r2_description/: CMakeLists.txt  package.xml
src/robot_r2_description/robot_r2_description/: pid_loader.py
src/robot_r2_description/src/: robot_r2_bar_rotate_controller.cpp  robot_r2_kfs_lift_controller.cpp  robot_r2_planar_move.cpp  robot_r2_tip_rotate_controller.cpp
src/robot_r2_description/urdf/: robot_r2.urdf
src/robot_r2_detect/: package.xml  requirements.txt  setup.cfg  setup.py
src/robot_r2_detect/robot_r2_detect/: kfs_detect.py
src/robot_r2_interfaces/: CMakeLists.txt
src/robot_r2_interfaces/msg/: KfsRawBox.msg  KfsRawDetections.msg  LiftFeedback.msg
src/sim_to_real/odin/odin_data_postprocess/: README.md  package.xml  setup.cfg  setup.py
src/sim_to_real/odin/odin_data_postprocess/config/: map_odom_tf_publisher.yaml  odometry_pose_republisher.yaml  odometry_tf_publisher.yaml
src/sim_to_real/odin/odin_data_postprocess/odin_data_postprocess/: __init__.py  map_odom_tf_publisher.py  odometry_pose_republisher.py  odometry_tf_publisher.py  transform_utils.py
src/sim_to_real/odin/odin_data_postprocess/test/: test_transform_utils.py
src/sim_to_real/serial_pkg/: package.xml  setup.cfg  setup.py
src/sim_to_real/serial_pkg/config/: serial_bridge.yaml
src/sim_to_real/serial_pkg/serial_pkg/: __init__.py  protocol.py  serial_bridge.py
src/sim_to_real/serial_pkg/test/: test_protocol.py
src/test_pkg/: package.xml
(+262 files in other folders)
