<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bringup</name>
  <version>0.0.0</version>
  <description>Simulation and real-hardware bringup for RC2026.</description>
  <maintainer email="skysky@example.com">skysky</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>odin_data_postprocess</exec_depend>
  <exec_depend>odin_ros_driver</exec_depend>
  <exec_depend>rc2026_field</exec_depend>
  <exec_depend>robot_r2_control</exec_depend>
  <exec_depend>robot_r2_detect</exec_depend>
  <exec_depend>robot_r2_description</exec_depend>
  <exec_depend>serial_pkg</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
