<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_pkg</name>
  <version>0.0.0</version>
  <description>Standalone executable tests for Robot R2 control services.</description>
  <maintainer email="skysky@example.com">skysky</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_r2_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
